basetest updates, add log4j and gitignore.

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,16 @@
-log4j.rootLogger=INFO,Logger
-log4j.appender.Logger=org.apache.log4j.FileAppender
-log4j.appender.Logger.File=logs/log4j.log
-log4j.appender.Logger.layout=org.apache.log4j.PatternLayout
-log4j.appender.Logger.layout.ConversionPattern=%-5p %d{yyyy-MM-dd HH:mm:ss } %x - %m%n
+log4j.rootLogger=INFO, stdout
+Direct=log messages to stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.stdout.filter.a=org.apache.log4j.varia.LevelMatchFilter
+log4j.appender.stdout.filter.a.LevelToMatch=WARN
+log4j.appender.stdout.filter.a.AcceptOnMatch=false
+log4j.logger.io.grpc.netty.shaded.io=OFF
+log4j.logger.org.apache.xmlbeans.impl=ERROR
+log4j.logger.org.reflections.Reflections=ERROR
+
+
+
 
